# etf-adaptive-rotation-qmt

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: local.example.yaml  strategy.yaml
docs/: LLM.md  OPERATIONS.md  PAGES.md  QUICKSTART.md  REFERENCE_AUDIT.md  SECURITY.md  STRATEGY.md  STRATEGY_UPDATES.md  VALIDATION.md
scripts/: backtest.ps1  doctor.ps1  install.ps1  live-monitor.ps1  live.ps1  llm-signal.ps1  reconcile.ps1  security_check.py  setup.ps1  validate.ps1  validate_strategy.py
src/etf_rotation/: __init__.py  backtest.py  cash_proxy.py  cli.py  config.py  data.py  execution.py  indicators.py  llm_decision.py  qmt.py  reporting.py  risk.py  runtime.py  schedule.py  strategy.py  validation.py  version.py
tests/: conftest.py  test_backtest.py  test_cash_proxy.py  test_config.py  test_llm_decision.py  test_readme.py  test_risk_execution.py  test_runtime.py  test_strategy.py  test_validation.py  test_version.py
