[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-adaptive-rotation-qmt"
version = "0.1.0"
description = "Adaptive T+0 ETF rotation and risk-control strategy for QMT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project contributors"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
etf-rr = "etf_rotation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
