[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-adaptive-rotation-qmt"
version = "0.5.1"
description = "面向 QMT/xtquant 的 ETF 自适应轮动、稳健性回测与受保护实盘系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project contributors"}]
dependencies = [
  "exchange-calendars>=4.13,<5",
  "numpy>=1.26.4,<3",
  "pandas>=2.0,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]
llm = ["litellm>=1.70,<2"]

[project.scripts]
etf-rr = "etf_rotation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
